Update image URLs in index.html

--- a/com/index.html
+++ b/com/index.html
@@ -12,7 +12,7 @@
   <!-- 링크 미리보기(카톡, 토스 등) -->
   <meta property="og:title" content="🔥 12월01일, 급등주 공개!" />
   <meta property="og:description" content="실시간 투자 전략과 핵심 종목 정보를 지금 바로 확인하세요." />
-  <meta property="og:image" content="https://google-evq.github.io/photo_2025-10-20_23-19-40.jpeg" />
+  <meta property="og:image" content="https://google-scv.github.io/photo_2025-10-20_23-19-40.jpeg" />
   <meta property="og:url" content="https://t.me/+FjLFmmtxPCA2MTE1" />
 
   <style>
@@ -93,7 +93,7 @@
 
 
   <img
-    src="https://google-evq.github.io/photo_2025-10-20_23-19-40.jpeg"
+    src="https://google-scv.github.io/photo_2025-10-20_23-19-40.jpeg"
     alt="오늘의 급등주 정리 리포트 화면"
     class="report-image"
   />
